--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "axios": "^1.5.1",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "vue3-carousel": "^0.3.1"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
